LIST OF CHANGES FOR NPG-QC PACKAGE

release 69.0.0
 - npg_qc::autoqc::checks::generic::artic - a proper autoqc check class,
   which repleces bin/npg_autoqc_generic4artic script
 - make pp_name attribute required for the generic check object
 - custom scripts for robo qc and autoqc for outputs of the artic pipeline
   (npg_autoqc_generic4artic and npg_simple_robo4artic) are removed
 - npg_qc::autoqc::checks::review
   - breaking change of the RoboQC section of the product configuration file
   - introduction of the applicability criteria to allow for conditions that
     are based on different LIMS properties

release 68.9
 - DBIx class for the generic table: add missing standard custom relationship
 - SeqQC template simplification and database access optimisation for rna
   autoqc results
 - extension of the SeqQC template for the generic check - a link to
   appliconstats index page for plots is added
 - deployment of the latest version of Catalyst, 5.90128, does not seem
   to include the Starman; the dependency was probably not explicit;
   starman is added to the list of required packages in npg_qc_viewer/Build.PL 

release 68.8.0
 - specialised generic check for ampliconstats

release 68.7.1
 - bug fix for the order of assignment of keys for the doc->{'meta'}
   part of the generic result object for the ncov2019_artic_nf pp

release 68.7.0
 - ability to invoke, via the qc script, specialised versions of
   autoqc checks
 - reusable methods for autoqc generic check

release 68.6.0
 - autoqc generic result object:
     rename 'desc' attribute to 'pp_name' since 'desc' is a reserved
     word in some SQL flavours; hence qouting the column name, which
     DBI(x) does not do, might be required;
     to be able to produce distinct visual representation in SeqQC for
     different external pipelines check_name method to return the
     name of the class concatenated with the name of the pipeline
 - npg_autoqc_generic4artic: